[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/sprite_gate/gate.png" type="Texture" id=1]
[ext_resource path="res://game/objects/Gate.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/emotes/sprite_emotes12.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="Gate" type="Node2D"]
visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InteractPrompt" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -20 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
